# actix-swagger

actix-swagger/: Cargo.toml
actix-swagger/src/: lib.rs
cargo-swagg/: Cargo.toml
demo/: Cargo.toml
demo/examples/: swagg.rs
demo/src/: lib.rs
swagg/src/: lib.rs
swagg/src/printer/: mod.rs
swagg/src/printer/api/: methods.rs  module.rs
